@@ -1,3 +1,8 @@
+2008-10-19  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-keyboard-properties-a11y.c: (setup_a11y_tabs): actually connect
+	the stickykeys_two_key_off button (bug #556818)
+
 2008-10-19  Sergey Udaltsov <svu@gnome.org>
 
 	* gnome-keyboard-properties-xkbot.c: Update group expander
